--- a/public/styles/tchart-graph-lines.css
+++ b/public/styles/tchart-graph-lines.css
@@ -9,9 +9,9 @@
 
 .tchart-graph-line {
   position: absolute;
-  width: 100%;
   left: 0;
   right: 0;
+  opacity: 0;
   vertical-align: middle;
   border-bottom: 0.14em solid #f5f5f5;
   padding-bottom: 0.28em;
