--- a/public/styles/tchart.css
+++ b/public/styles/tchart.css
@@ -31,7 +31,6 @@
   width: 100%;
   height: 100%;
   transform: scale(1, -1);
-  transition: width .1s, transform .1s;
 }
 
 .tchart-svg-path {
@@ -43,11 +42,11 @@
 }
 
 .tchart-svg-mark {
-  transition: transform .1s;
+  /*transition: transform .3s;*/
 }
 
 .tchart-svg-mark circle{
-  transition: transform .1s;
+  transition: transform .3s;
 }
 
 .tchart-graph-mark {
@@ -55,7 +54,7 @@
   fill: #ffffff;
   stroke-width: 0.14em;
   vector-effect: non-scaling-stroke;
-  transition: opacity .1s, transform .1s;
+  transition: opacity .1s, transform .3s;
 }
 
 .tchart-xmark {
@@ -63,6 +62,7 @@
   stroke-width: 0.14em;
   vector-effect: non-scaling-stroke;
   transition: opacity .1s, transform .1s;
+  opacity: 0;
 }
 
 .tchart-theme-switcher {
