feat(marks): move to separate svg

--- a/public/styles/tchart.css
+++ b/public/styles/tchart.css
@@ -33,28 +33,34 @@
   transform: scale(1, -1);
 }
 
+.tchart-svg-marks {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: scale(1, -1);
+  pointer-events: none;
+}
+
 .tchart-svg-path {
   stroke-width: 0.14em;
 }
 
 .tchart-svg path {
-  transition: transform .3s, opacity .2s;
+  transition: transform .1s, opacity .2s;
 }
 
 .tchart-svg-mark {
-  /*transition: transform .3s;*/
 }
 
 .tchart-svg-mark circle{
-  transition: transform .3s;
+  transition: transform .1s;
 }
 
 .tchart-graph-mark {
-  border-radius: 0.32em;
   fill: #ffffff;
   stroke-width: 0.14em;
   vector-effect: non-scaling-stroke;
-  transition: opacity .1s, transform .3s;
+  transition: opacity .1s, transform .1s;
 }
 
 .tchart-xmark {
